# tux-validation

./: Cargo.toml
.github/workflows/: ci.yaml
examples/: i2c_discover_devices.rs  i2c_verify_address.rs  os_release_check.rs  verify_i2c_address.rs
src/: device.rs  i2c.rs  lib.rs  os_release.rs
tests/: system_health.rs
