[package]
name = "tux-validation"
version = "0.1.0"
edition = "2024"
authors = ["Christopher Obbard <christopher.obbard@linaro.org>", "Iakov Polyak <iakov.polyak@linaro.org>"]
license = "MIT AND Apache-2.0"
description = "Linux Validation Framework"

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] } # Added for CLI args
i2cdev = "0.6"
nix = "0.26.4"
